--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+Version 2.1
+-----------
+Apps: Tuba, Cura, Kitty, Signal, Prusa Slicer,
+Games: (Steam) Oaken, (Steam) Sandwalkers (Demo),
+Games: (Steam) Spellforce: Conquest of Eo,
+Games: (Steam) Age of Wonder 3 + 4, (Steam) Trials of Fire, 
+Games: (Steam) Dark Bestiary, (Steam) The Last Spell,
+Games: (Steam) War of the Overworld,
+Games: (Steam) Zoria: Age of Shattering (Demo),
+Games: (Steam) Wolcen: Lords of Mayhem,
+
 Version 2.0
 -----------
 Added: Red color icon theme
