--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+Version 2.2
+-----------
+Apps: calibre, beekeeper,
+Games: (Steam) Marvel's Midnight Suns,
+Games: (Steam) Lost Eidolons, (Steam) WarTales,
+Games: (Steam) Immortal Realms Vampire Wars
+
 Version 2.1
 -----------
 Apps: Tuba, Cura, Kitty, Signal, Prusa Slicer,
