--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+Version 2.4
+-----------
+Added: Chrome (flatpak), Extension Manager,
+Added: Word (o20), Thunderbird (flatpak),
+Added: OpenMW (flatpak), Yandex browser,
+Games: Minecraft
+
+Version 2.3.1
+-----------
+Changed: (Steam) Baldur's Gate 3, (Steam) Age of Wonders 4,
+
 Version 2.3
 -----------
 Added: Tor Browser, Free Download Manager,
